checkbox align with label in the create issue page

--- a/styles/common.css
+++ b/styles/common.css
@@ -947,6 +947,10 @@ ul.tagit input[type="text"] {
 	    font-size: 17px;
 	}
 	
+	.checkbox-float-right {
+		float:right;
+	}
+	
 	.margin-bottom-10 {
 		margin-bottom:10px;
 	}
